--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "viching-mongodb-acid",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "src/index.ts",
   "scripts": {
-    "build": "node_modules/.bin/tsc",
-    "test": "node ./build/test/test.js"
+    "test": "gulp tests"
   },
   "repository": {
     "type": "git",
@@ -22,12 +20,30 @@
   },
   "homepage": "https://github.com/viching/viching-mongodb-acid#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.4",
     "@types/express": "^4.17.1",
+    "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.23",
-    "@types/node": "^12.11.6",
+    "@types/node": "^12.11.7",
+    "@types/sinon": "^7.5.0",
+    "chai": "^4.2.0",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-mocha": "^7.0.2",
+    "gulp-replace": "^1.0.0",
+    "gulp-shell": "^0.7.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-tslint": "^8.1.4",
+    "gulp-typescript": "^5.0.1",
+    "gulpclass": "^0.2.0",
+    "mocha": "^6.2.2",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0",
+    "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
+    "tslint-stylish": "^2.1.0",
     "typescript": "^3.6.4"
   },
   "dependencies": {
